kubernetes/ollama/webui/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: webui
        image: webui
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: "500m"
            memory: "800Mi"
          limits:
            cpu: "500m"
            memory: "800Mi"
        volumeMounts:
        - name: data
          mountPath: /app/backend/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: webui
