kubernetes/ollama/webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
