kubernetes/ollama/webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webui-internal
spec:
  ingressClassName: nginx-internal
  rules:
  - host: chat.internal.yuha0.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webui
            port:
              number: 8080
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webui-external
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
    external-dns.alpha.kubernetes.io/target: "ddns.yuha0.com"
    nginx.ingress.kubernetes.io/limit-connections: "50"
spec:
  ingressClassName: nginx-external
  rules:
  - host: chat.yuha0.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: webui
            port:
              number: 8080
  tls:
    - hosts:
      - chat.yuha0.com
      secretName: webui-tls-certificate
